--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "^0.71.6",
     "react-native-elements": "^3.4.3",
-    "react-native-responsive-dimensions": "^3.1.1"
+    "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
