--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "expo-av": "^13.2.1",
     "react": "18.2.0",
     "react-native": "^0.71.6",
     "react-native-elements": "^3.4.3",
